fix overflow issue

--- a/src/app/main-view/rightbar/rightbar.component.scss
+++ b/src/app/main-view/rightbar/rightbar.component.scss
@@ -18,7 +18,7 @@
   }
     h1, p{
       padding:0;
-      display:inline-block;
+      display:block;
       margin:25px 20px;
     }
     p{
